src/test/deca/test_compilateur/context/invalid/created/decl_class/decl_class_comme_boolean.deca
// Description :
//    new utilisé avec un identificateur boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9 :(3.42) boolean n'est pas un type de classe

{
boolean b = new boolean();
}